--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,11 @@
 name = "lastframe-getter"
 main = "src/worker.ts"
 compatibility_date = "2025-09-10"
-assets = { directory = "dist/client", binding = "ASSETS" }
+
+[assets]
+directory = "dist/client"
+binding = "ASSETS"
+not_found_handling = "single-page-application"
 workers_dev = true
 
 [vars]
